service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unoserver
spec:
  type: ClusterIP
  selector: { app: unoserver }
  ports:
    - port: 8080
      targetPort: 8080
