ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unoserver-ingress
  namespace: semoss
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - workshop.cfg.deloitte.com
      secretName: workshop-tls
  rules:
    - host: workshop.cfg.deloitte.com
      http:
        paths:
          - path: /unoserver/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: unoserver
                port:
                  number: 8080
